deploy: 184aeec2468b321a566230c4f62e243d11368fb2

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ ul.task-list li input[type="checkbox"] {
       <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./anaylzer/index.html" class="sidebar-item-text sidebar-link">FLUX:: Analyzer</a>
+  <a href="./analyzer/index.html" class="sidebar-item-text sidebar-link">FLUX:: Analyzer</a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -262,7 +262,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./Syrah/index.html" class="sidebar-item-text sidebar-link">Syrah</a>
+  <a href="./syrah/index.html" class="sidebar-item-text sidebar-link">Syrah</a>
   </div>
 </li>
       </ul>
@@ -282,7 +282,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./ircam_spat/index.html" class="sidebar-item-text sidebar-link">IRCAM-Tools SPAT</a>
+  <a href="./ircam-spat/index.html" class="sidebar-item-text sidebar-link">IRCAM-Tools SPAT</a>
   </div>
 </li>
           <li class="sidebar-item">
