--- a/spat-revolution/Application_Preferences.html
+++ b/spat-revolution/Application_Preferences.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -569,7 +569,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">41</span>&nbsp; <span class="chapter-title">Application preference</span></h1>
+<h1 class="title"><span id="sec-application-preference" class="quarto-section-identifier"><span class="chapter-number">41</span>&nbsp; <span class="chapter-title">Application preference</span></span></h1>
 </div>
 
 
@@ -769,7 +769,7 @@ Warning
 <p></p><figcaption class="figure-caption">OSC Connections Section</figcaption><p></p>
 </figure>
 </div>
-<p>This panel allows creating OSC connection between SPAT Revolution and other devices, like tablets, phones, computers and many others. More information is available on the <a href="Ecosystem_&amp;_integration_OSC_Connections_Matrix.md">OSC section</a>.</p>
+<p>This panel allows creating OSC connection between SPAT Revolution and other devices, like tablets, phones, computers and many others. More information is available on the <a href="Ecosystem_&amp;_integration_OSC_Connections_Matrix.html">OSC section&nbsp;<span>43</span></a>.</p>
 </section>
 <section id="snapshots" class="level2" data-number="41.6">
 <h2 data-number="41.6" class="anchored" data-anchor-id="snapshots"><span class="header-section-number">41.6</span> Snapshots</h2>
@@ -893,7 +893,7 @@ Warning
 <p></p><figcaption class="figure-caption">BlackTrax Section</figcaption><p></p>
 </figure>
 </div>
-<p>See the integration chapter about <a href="ThirdParty_BlackTrax.md">BlackTrax</a></p>
+<p>See the integration chapter about <a href="ThirdParty_BlackTrax.html">BlackTrax&nbsp;<span>60</span></a></p>
 
 
 </section>
