--- a/spat-revolution/Ecosystem_&_integration_DAW_Automation_Local_Audio_Path.html
+++ b/spat-revolution/Ecosystem_&_integration_DAW_Automation_Local_Audio_Path.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -504,7 +504,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">45</span>&nbsp; <span class="chapter-title">SPAT PI : Local audio path</span></h1>
+<h1 class="title"><span id="sec-lap" class="quarto-section-identifier"><span class="chapter-number">45</span>&nbsp; <span class="chapter-title">SPAT PI : Local audio path</span></span></h1>
 </div>
 
 
@@ -616,7 +616,7 @@ Warning
 <p><strong>Be always sure that each track containing a SPAT Send plug-in is routed to every and each track containing a Spat Return plug-in.</strong></p>
 </div>
 </div>
-<p>For more DAW specific information, please consult our <a href="Third_Party_Integration.md">third-party integration</a> section.</p>
+<p>For more DAW specific information, please consult our <span class="quarto-unresolved-ref">?sec-third-party</span> section.</p>
 </section>
 <section id="dealing-with-daw-cpu-optimizations" class="level2" data-number="45.4">
 <h2 data-number="45.4" class="anchored" data-anchor-id="dealing-with-daw-cpu-optimizations"><span class="header-section-number">45.4</span> Dealing with DAW CPU optimizations</h2>
@@ -632,7 +632,7 @@ Warning
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>Be sure to consult our <a href="Third_Party_Integration.md">third-party integration</a> section for more DAW specific information.</p>
+<p>Be sure to consult our <span class="quarto-unresolved-ref">?sec-third-party</span> section for more DAW specific information.</p>
 </div>
 </div>
 
