--- a/spat-revolution/Ecosystem_&_integration_Snapshot.html
+++ b/spat-revolution/Ecosystem_&_integration_Snapshot.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -542,7 +542,7 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Recall relative</li>
 </ul>
-<p>This option enable to keep differences between the current state and the current snapshots. More information about it <a href="Spat_Environment_Snapshot_Page.md">on the snapshot page section</a>.</p>
+<p>This option enable to keep differences between the current state and the current snapshots. More information about it <a href="Spat_Environment_Snapshot_Page.html">on the snapshot page section&nbsp;<span>26</span></a>.</p>
 <ul>
 <li>Global</li>
 </ul>
@@ -582,7 +582,7 @@ Warning
 </section>
 <section id="handle-snapshots-with-osc" class="level1" data-number="47">
 <h1 data-number="47"><span class="header-section-number">47</span> Handle snapshots with OSC</h1>
-<p>Different snapshots actions could be launched by OSC messages. The complete list of them is available on the <a href="Appendix_C_OSC_Table.md">OSC Table</a>.</p>
+<p>Different snapshots actions could be launched by OSC messages. The complete list of them is available on the <a href="Appendix_C_OSC_Table.html">OSC Table&nbsp;<span>C</span></a>.</p>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
