--- a/spat-revolution/Items_Page.html
+++ b/spat-revolution/Items_Page.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -589,7 +589,7 @@ ul.task-list li input[type="checkbox"] {
 <p>In addition to the common parameters, when the <em>Source</em> item’s type is selected, the Items’ Page allows quick edit of:</p>
 <ul>
 <li><strong>Color</strong>: select the color of the source.</li>
-<li><strong>Room</strong>: list the rooms’ names the source belongs to. <em>The rows can be grouped by rooms. See <a href="Items_Page.md#Group sources by rooms">Group sources by rooms</a></em></li>
+<li><strong>Room</strong>: list the rooms’ names the source belongs to. <em>The rows can be grouped by rooms. See Group sources by rooms below</em></li>
 <li><strong>Speaker arrangement</strong>: select the speaker arrangement of the source.</li>
 <li><strong>Remote</strong>: define if the source can be controlled by OSC or not.</li>
 <li><strong>Remote number</strong>: define the index of the source on OSC side. <em>If set to 0, the remote number is equal to the source number. Careful with this behavior: this will be edited with the source order.</em></li>
