--- a/spat-revolution/Spat_Environment_Modules_channel_count.html
+++ b/spat-revolution/Spat_Environment_Modules_channel_count.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -550,7 +550,7 @@ Note
 <h2 data-number="23.3" class="anchored" data-anchor-id="four-channel-input"><span class="header-section-number">23.3</span> Four Channel Input</h2>
 <p>The next significant channel count that needs disambiguation from the user is a four-channel stream.</p>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Setup/InputInspectorQuad.png" class="img-fluid"></p>
-<p>A four-channel stream could contain the format of a four-speaker Channel Based formats (QUAD, 4.0, LCRS) but could also contain different formats of interleaved four-channel Ambisonic audio (A-Format, B-Format). You can read more about A-Format and B-Format in the <a href="Scene_based_streams.md">Ambisonics</a> section of this user guide. The important thing to remember here is that confusing Ambisonic audio and Channel Based audio is a significant mistake, even though you might hear something ‘wide sounding.’</p>
+<p>A four-channel stream could contain the format of a four-speaker Channel Based formats (QUAD, 4.0, LCRS) but could also contain different formats of interleaved four-channel Ambisonic audio (A-Format, B-Format). You can read more about A-Format and B-Format in the <span class="citation" data-cites="scene-based">[Ambisonics -@scene-based]</span> section of this user guide. The important thing to remember here is that confusing Ambisonic audio and Channel Based audio is a significant mistake, even though you might hear something ‘wide sounding.’</p>
 <div class="callout callout-style-default callout-warning callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
