--- a/spat-revolution/Spat_Environment_Room.html
+++ b/spat-revolution/Spat_Environment_Room.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -511,7 +511,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">27</span>&nbsp; <span class="chapter-title">Room</span></h1>
+<h1 class="title"><span id="sec-spat-rooms" class="quarto-section-identifier"><span class="chapter-number">27</span>&nbsp; <span class="chapter-title">Room</span></span></h1>
 </div>
 
 
@@ -530,7 +530,7 @@ ul.task-list li input[type="checkbox"] {
 <p>In <em>SPAT Revolution</em>, spatialization of virtual sources takes places inside <em>Rooms</em>. To enter a room and open its graphic editor environment, double-click on a room module in the Setup graph, or select a room tab from the Navigation bar.</p>
 <p>When we enter a Room, we will see the 3D view and all the connected sources. Option related to the 3D view display are located in top menu. On the left side panel of the room editor, you get a list representation of each source with its index identification number. We can click on the Index number of each source, and the <em><span class="citation" data-cites="sources-parameters">[source parameters -@sources-parameters]</span></em> editor for that virtual source will appear.</p>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Room/3DView.png" class="img-fluid"></p>
-<p>Two special index items labeled as <strong>(R) REVERB</strong> and <strong>(M) OUTPUT</strong> appear fixed at the bottom of the left panel. By clicking on these, we then enter into two more parameter editors: one relating to the <em><a href="Spat_Environment_Artificial_Reverberation.md">Artificial reverberation</a></em> and one relating to the room output configuration and <a href="Spatialisation_Technology_Listener_Position.md">Listener Position</a> editor.</p>
+<p>Two special index items labeled as <strong>(R) REVERB</strong> and <strong>(M) OUTPUT</strong> appear fixed at the bottom of the left panel. By clicking on these, we then enter into two more parameter editors: one relating to the <em><span class="citation" data-cites="artificial-reverb">[Artificial reverberation -@artificial-reverb]</span></em> and one relating to the room output configuration and <a href="Spatialisation_Technology_Listener_Position.html">Listener Position&nbsp;<span>7</span></a> editor.</p>
 <p>Mutes and solos are manageable for all sources and for the entire room output from this index list. A solo clear button is available on the top of the source list. Clicking on it will reset all the solo of all rooms.</p>
 <p>When you have more than one Room in your project, then the SOURCES switch at the top left of a Room editor can be handy, as it will show all sources from all Rooms in the same editor - allowing edition, mix, solo and mute management of all sources from one Room view.</p>
 <!--## Room Graphic Engine
@@ -553,7 +553,7 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>To understand better what these two first options do, consult the “<a href="Spat_Environment_Understanding_the_3D_View.md">Understanding the mixing zones</a>” section.</p>
+<p>To understand better what these two first options do, consult the “<a href="Spat_Environment_Understanding_the_3D_View.html">Understanding the mixing zones&nbsp;<span>31</span></a>” section.</p>
 </div>
 </div>
 <p><strong>Source Infos:</strong></p>
@@ -581,7 +581,7 @@ Note
 <p>When set to 0%, Nebula does not take any resources at all.</p>
 </div>
 </div>
-<p>Consult the “<a href="Spat_Environment_Nebula.md">Nebula Spatial Spectrogram</a>” section for more information.</p>
+<p>Consult the “<a href="Spat_Environment_Nebula.html">Nebula Spatial Spectrogram&nbsp;<span>38</span></a>” section for more information.</p>
 <p><strong>Nebula Quality:</strong></p>
 <p>Configure the quality factor of nebula.</p>
 <div class="callout callout-style-default callout-note callout-titled">
@@ -620,7 +620,7 @@ Note
 <section id="output-list" class="level3" data-number="27.3.1">
 <h3 data-number="27.3.1" class="anchored" data-anchor-id="output-list"><span class="header-section-number">27.3.1</span> Output list</h3>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Room/OutputListPanel.png" class="img-fluid"></p>
-<p>This panel lists all the speakers used in the room (when set to channel based). It allows quick access to the speaker arrangement editor and to the compute function. Each output has a “test” button that sends the signal from the signal generator directly the routed speaker. The signal generator type and level are set in the <em><a href="Application_Preferences.md">Preferences page</a></em>.</p>
+<p>This panel lists all the speakers used in the room (when set to channel based). It allows quick access to the speaker arrangement editor and to the compute function. Each output has a “test” button that sends the signal from the signal generator directly the routed speaker. The signal generator type and level are set in the <em><a href="Application_Preferences.html">Preferences page&nbsp;<span>41</span></a></em>.</p>
 </section>
 <section id="listener" class="level3" data-number="27.3.2">
 <h3 data-number="27.3.2" class="anchored" data-anchor-id="listener"><span class="header-section-number">27.3.2</span> Listener</h3>
@@ -630,7 +630,7 @@ Note
 <section id="protection-zone" class="level3" data-number="27.3.3">
 <h3 data-number="27.3.3" class="anchored" data-anchor-id="protection-zone"><span class="header-section-number">27.3.3</span> Protection Zone</h3>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Room/OutputProtectionZonePanel.png" class="img-fluid"></p>
-<p>This panel controls the behavior and size of the protection zone. By default, it is set to a diameter of four meters. Please check out the section named <a href="Spat_Environment_Understanding_the_3D_View.md">Understanding the mixing zone</a> if you want more information about the protection zone. Note that the protection zone is attached to the listener position.</p>
+<p>This panel controls the behavior and size of the protection zone. By default, it is set to a diameter of four meters. Please check out the section named <a href="Spat_Environment_Understanding_the_3D_View.html">Understanding the mixing zone&nbsp;<span>31</span></a> if you want more information about the protection zone. Note that the protection zone is attached to the listener position.</p>
 <ul>
 <li>Source fit speakers elevation</li>
 <li>Source over listener head</li>
@@ -642,7 +642,7 @@ Note
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Room/OutputEfficiencyZonePanel.png" class="img-fluid"></p>
 <p>This panel contains options related to the efficiency zone.</p>
 <ul>
-<li>Clamping behavior option (consult the <a href="Spat_Environment_Understanding_the_3D_View.md">Understanding the mixing zone</a> section for more information)</li>
+<li>Clamping behavior option (consult the <a href="Spat_Environment_Understanding_the_3D_View.html">Understanding the mixing zone&nbsp;<span>31</span></a> section for more information)</li>
 <li>Depth - change the depth of the efficiency zone</li>
 <li>Trunc (available only for non-surrounding 2D speakers’ setup) - change the starting distance of the efficiency zone</li>
 </ul>
