--- a/spat-revolution/Spat_Environment_Source_Room_Modules.html
+++ b/spat-revolution/Spat_Environment_Source_Room_Modules.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -516,7 +516,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">20</span>&nbsp; <span class="chapter-title">Sources &amp; Rooms Module</span></h1>
+<h1 class="title"><span id="sec-source-room-modules" class="quarto-section-identifier"><span class="chapter-number">20</span>&nbsp; <span class="chapter-title">Sources &amp; Rooms Module</span></span></h1>
 </div>
 
 
@@ -535,7 +535,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 data-number="20.1" class="anchored" data-anchor-id="source-module"><span class="header-section-number">20.1</span> Source module</h2>
 <p>Sources’ modules are very important and quite unique ones. This is where the object-oriented mixing of SPAT Revolution takes in.</p>
 <p>Sources’ modules associated metadata to incoming audio streams. Because of their object-oriented nature, <strong>they can only input and output channel-based streams</strong>. In practice, this means you cannot patch, for example, an ambisonic stream to a room, even if the room in question is ambisonic itself. It first needs to be transcoded by using and input transcoder.</p>
-<p>The so-called metadata is the source parameters, such as position and reverberation information. All these parameters are explained in the section <a href="Spat_Environment_Source.md">Source properties</a>.</p>
+<p>The so-called metadata is the source parameters, such as position and reverberation information. All these parameters are explained in the section <a href="Spat_Environment_Source.html">Source properties&nbsp;<span>28</span></a>.</p>
 <p>One source can be connected to several rooms. This is one of the advantages of the object-based mixing: it allows to create different mixes in different formats with the same exact information.</p>
 <section id="name" class="level3" data-number="20.1.1">
 <h3 data-number="20.1.1" class="anchored" data-anchor-id="name"><span class="header-section-number">20.1.1</span> Name</h3>
@@ -588,7 +588,7 @@ Warning
 <p><em>RTTrPM protocol is not available with the <strong>Essential</strong> license of SPAT Revolution</em>.</p>
 </div>
 </div>
-<p>When you have correctly set up the BlackTrax protocol (see <a href="ThirdParty_BlackTrax.md">BlackTrax Integration section</a>) then you can directly assign Tracking Number to virtual sources, and also to listener position (see <a href="Spatialisation_Technology_Listener_Position.md">Listener position section</a>) for advanced virtual reality interactive audio projects.</p>
+<p>When you have correctly set up the BlackTrax protocol (see <a href="ThirdParty_BlackTrax.html">BlackTrax Integration section&nbsp;<span>60</span></a>) then you can directly assign Tracking Number to virtual sources, and also to listener position (see <a href="Spatialisation_Technology_Listener_Position.html">Listener position section&nbsp;<span>7</span></a>) for advanced virtual reality interactive audio projects.</p>
 </section>
 <section id="gain" class="level3" data-number="20.1.4">
 <h3 data-number="20.1.4" class="anchored" data-anchor-id="gain"><span class="header-section-number">20.1.4</span> Gain</h3>
@@ -650,7 +650,7 @@ Warning
 </section>
 <section id="tracking-1" class="level3" data-number="21.0.2">
 <h3 data-number="21.0.2" class="anchored" data-anchor-id="tracking-1"><span class="header-section-number">21.0.2</span> Tracking</h3>
-<p>See <a href="Spatialisation_Technology_Listener_Position.md">Listener position section</a>.</p>
+<p>See <a href="Spatialisation_Technology_Listener_Position.html">Listener position section&nbsp;<span>7</span></a>.</p>
 </section>
 <section id="gain-1" class="level3" data-number="21.0.3">
 <h3 data-number="21.0.3" class="anchored" data-anchor-id="gain-1"><span class="header-section-number">21.0.3</span> Gain</h3>
