--- a/spat-revolution/Spat_Environment_Speaker_Arrangement.html
+++ b/spat-revolution/Spat_Environment_Speaker_Arrangement.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -506,7 +506,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">32</span>&nbsp; <span class="chapter-title">Speaker Arrangement Editor</span></h1>
+<h1 class="title"><span id="sec-speaker-editor" class="quarto-section-identifier"><span class="chapter-number">32</span>&nbsp; <span class="chapter-title">Speaker Arrangement Editor</span></span></h1>
 </div>
 
 
@@ -557,7 +557,7 @@ Warning
 </div>
 <p>While there are many standardized speaker array, such as Dolby Surround, Atmos, Auro 3D, DTS, Quad or even stereo, we are in many cases confronted to a very specific speaker positioning.</p>
 <p>For such use case, it is possible to create custom speaker arrangements. Using a well-defined custom speaker arrangement will improve the sound stage and the overall impression of immersion of the audience. We always highly recommend taking the time to measure the position of the speakers of your system and to input them in <em>SPAT Revolution</em>.</p>
-<p>We also create a powerful automatic speaker alignment tool that aligns, in time and in level, all the speakers of the arrangement on the furthest away one. These “virtual” positions are used by <em>SPAT Revolution</em> to process the sound stage through pan law. Please, check the <a href="Spat_Environment_Speaker_Arrangement_Editor.md">Speaker Arrangement Editor</a> section for more information.</p>
+<p>We also create a powerful automatic speaker alignment tool that aligns, in time and in level, all the speakers of the arrangement on the furthest away one. These “virtual” positions are used by <em>SPAT Revolution</em> to process the sound stage through pan law. Please, check the <a href="Spat_Environment_Speaker_Arrangement_Editor.html">Speaker Arrangement Editor&nbsp;<span>33</span></a> section for more information.</p>
 <p>To make this task as easy as possible, <em>SPAT Revolution</em> supports both cartesian and spherical coordinate system and can also import speaker configurations from third-party softwares, such as NS-1, Blueprint or ArrayCal.</p>
 </section>
 <section id="understanding-when-a-speaker-arrangement-or-a-sound-scene-is-2d-or-3d" class="level2" data-number="32.3">
