--- a/spat-revolution/Spat_Environment_Speaker_Arrangement_Editor.html
+++ b/spat-revolution/Spat_Environment_Speaker_Arrangement_Editor.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -588,7 +588,7 @@ Warning
 </div>
 </div>
 <p><strong>Rename:</strong> rename the current speaker arrangement.</p>
-<p><strong>Import from:</strong> allow importing a speaker configuration from a third-party software. See the <a href="Spat_Environment_Import_Speaker_Config.md">next section</a> for more detail.</p>
+<p><strong>Import from:</strong> allow importing a speaker configuration from a third-party software. See the <a href="#sec-speaker-editor">next section&nbsp;<span>33</span></a> for more detail.</p>
 <p><strong>Export:</strong> open a window to export a selection of speaker arrangement.</p>
 </section>
 <section id="alignment-section" class="level3" data-number="33.1.2">
@@ -604,7 +604,7 @@ Warning
 </section>
 <section id="selected-or-all-speakers-section" class="level3" data-number="33.1.3">
 <h3 data-number="33.1.3" class="anchored" data-anchor-id="selected-or-all-speakers-section"><span class="header-section-number">33.1.3</span> Selected or all speakers section</h3>
-<p><strong>Transform:</strong> modify the selected or all speakers according to a specified transformation. For more information about it, check out the <a href="Spat_Environment_Transformation.md">transformation section</a>.</p>
+<p><strong>Transform:</strong> modify the selected or all speakers according to a specified transformation. For more information about it, check out the <a href="Spat_Environment_Transformation.html">transformation section&nbsp;<span>35</span></a>.</p>
 <p><strong>Set orientation</strong>: set the orientation of selected or all speakers.</p>
 <p><strong>Fix automatic orientation</strong>: for speakers whose orientation is set to automatic, replace it to real orientation (front, back, listener, custom with the given angle, …) instead of automatic.</p>
 <p><strong>Del.:</strong> remove the selected speaker(s) in the arrangement.</p>
@@ -738,7 +738,7 @@ Note
 <p>Error displayed with HOA panning type.</p>
 </div>
 </div>
-<p>For more information about each pan law, check out the section <a href="Spatialisation_Technology_Panning_Algorithms.md">Panning algorithms</a>.</p>
+<p>For more information about each pan law, check out the section <a href="Spatialisation_Technology_Panning_Algorithms.html">Panning algorithms&nbsp;<span>11</span></a>.</p>
 </section>
 </section>
 <section id="sec-speaker-editor-alignment" class="level2" data-number="33.2">
