--- a/spat-revolution/Spat_Environment_Transformation.html
+++ b/spat-revolution/Spat_Environment_Transformation.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -502,7 +502,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">35</span>&nbsp; <span class="chapter-title">Transformation</span></h1>
+<h1 class="title"><span id="sec-transformation" class="quarto-section-identifier"><span class="chapter-number">35</span>&nbsp; <span class="chapter-title">Transformation</span></span></h1>
 </div>
 
 
@@ -522,7 +522,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 data-number="35.1" class="anchored" data-anchor-id="sources-transformations"><span class="header-section-number">35.1</span> Sources Transformations</h2>
 <p>As with the custom speaker arrangement editor, we can apply some transformations to one or multiple sources. This feature is especially handy if you wish to quickly set sources on a circle, or to put a selection of sources at the distance for examples.</p>
 <p>To open the transform menu, right-click on a source in the source panel and choose “Transform.” You can also use the shortcut <code>CMD/CTRL + SHIFT + T</code>.</p>
-<p>Please check the section about <a href="Spatialisation_Technology_Speaker_Arrangement.md">Speaker Arrangement</a> if you want more details about the different transform. Sources’ transformations also include an integration time which allows to create smooth transition between the current and the new source position.</p>
+<p>Please check the section about <a href="Spat_Environment_Speaker_Arrangement_Editor.html">Speaker Arrangement&nbsp;<span>33</span></a> if you want more details about the different transform. Sources’ transformations also include an integration time which allows to create smooth transition between the current and the new source position.</p>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Room/SourceTransform.png" class="img-fluid"></p>
 </section>
 <section id="speaker-transformation" class="level2" data-number="35.2">
