--- a/spat-revolution/Spat_Environment_Understanding_the_3D_View.html
+++ b/spat-revolution/Spat_Environment_Understanding_the_3D_View.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -508,7 +508,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">31</span>&nbsp; <span class="chapter-title">Understanding the mixing zones</span></h1>
+<h1 class="title"><span id="sec-understanding-3D-view" class="quarto-section-identifier"><span class="chapter-number">31</span>&nbsp; <span class="chapter-title">Understanding the mixing zones</span></span></h1>
 </div>
 
 
@@ -572,7 +572,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="behaviour-of-sources-outside-the-efficiency-zone" class="level3" data-number="31.3.1">
 <h3 data-number="31.3.1" class="anchored" data-anchor-id="behaviour-of-sources-outside-the-efficiency-zone"><span class="header-section-number">31.3.1</span> Behaviour of sources outside the efficiency zone</h3>
 <p>When a source is out of the efficiency zone, <em>SPAT Revolution</em> offers three behaviours: 1. The source is clamped to the efficiency zone (default for new session) 2. The source is muted 3. It does nothing (default for pre 22.02 release sessions)</p>
-<p>This option can be set in the room’s output section. Check out the <a href="Spat_Environment_Room.md">Room section</a> for more information.</p>
+<p>This option can be set in the room’s output section. Check out the <a href="Spat_Environment_Room.html">Room section&nbsp;<span>27</span></a> for more information.</p>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -679,7 +679,7 @@ Note
 <ul>
 <li>Elevation clamping does not occur with distance-based pan law (KNN and WFS) when using 3D speaker array, except for the Z=0 plan. This prevents some jumps and aberrations in sound.</li>
 <li>When using a 2D non-surrounding speaker array, efficiency and elevation clamping are tied together. If efficiency clamping is activated, <em>SPAT Revolution</em> automatically switches on the elevation clamping. On the contrary, if elevation clamping is turned off, then, so is the efficiency clamping.</li>
-<li>WFS is the only case where it can make sense to put virtual sources in front of the speakers, to take advantages of the focus zone. This zone and the associated behaviour is detailed in the <a href="Spatialisation_Technology_WFS.md">WFS Section</a> of this user guide.</li>
+<li>WFS is the only case where it can make sense to put virtual sources in front of the speakers, to take advantages of the focus zone. This zone and the associated behaviour is detailed in the <a href="Spat_Environment_Room.html">WFS Section&nbsp;<span>27</span></a> of this user guide.</li>
 </ul>
 
 
