--- a/spat-revolution/Third_Party_Ableton_Live_Tools_for_SPAT_Revolution.html
+++ b/spat-revolution/Third_Party_Ableton_Live_Tools_for_SPAT_Revolution.html
@@ -74,7 +74,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">12. Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_Ableton_Live_Tools_for_SPAT_Revolution.html"><span class="chapter-number">52</span>&nbsp; <span class="chapter-title">Ableton Live Tools for SPAT Revolution</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_Ableton_Live_Tools_for_SPAT_Revolution.html"><span class="chapter-number">52</span>&nbsp; <span class="chapter-title">Ableton Live Tools for SPAT Revolution</span></a></li></ol></nav>
       <a class="flex-grow-1" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -623,7 +623,7 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>If you already have a FLUX:: account as well as an iLok account and already have a SPAT Revolution License or Trial you can jump to the <a href="https://doc.flux.audio/#/en_US/spat_revolution_doc/Third_Party_Ableton_Live_Tools_for_SPAT_Revolution?id=tools">next section of the guide</a>.</p>
+<p>If you already have a FLUX:: account as well as an iLok account and already have a SPAT Revolution License or Trial you can jump to the next section of the guide.</p>
 </div>
 </div>
 <p>You can also follow this part with the dedicated video as well:</p>
@@ -798,7 +798,7 @@ Warning
 </ul>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/set_input_device.gif" class="img-fluid"></p>
 <ul>
-<li>Activate the OSC and set up the connection (find more about OSC configuration on the <a href="Ecosystem_&amp;_integration_OSC_Connections_Matrix.md">OSC documentation section</a>:</li>
+<li>Activate the OSC and set up the connection (find more about OSC configuration on the <a href="Ecosystem_&amp;_integration_OSC_Connections_Matrix.html#sec-intro-osc">OSC documentation section&nbsp;<span>43.1</span></a>:</li>
 </ul>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/enable_OSC.gif" class="img-fluid"></p>
 </section>
