--- a/spat-revolution/Third_Party_ProTools.html
+++ b/spat-revolution/Third_Party_ProTools.html
@@ -74,7 +74,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">12. Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_ProTools.html"><span class="chapter-number">50</span>&nbsp; <span class="chapter-title">Avid Pro Tools (2022 Update)</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_ProTools.html"><span class="chapter-number">50</span>&nbsp; <span class="chapter-title">Avid Pro Tools (2022 Update)</span></a></li></ol></nav>
       <a class="flex-grow-1" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -512,7 +512,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">50</span>&nbsp; <span class="chapter-title">Avid Pro Tools (2022 Update)</span></h1>
+<h1 class="title"><span id="sec-protools" class="quarto-section-identifier"><span class="chapter-number">50</span>&nbsp; <span class="chapter-title">Avid Pro Tools (2022 Update)</span></span></h1>
 </div>
 
 
@@ -594,7 +594,7 @@ Warning
 <p><strong>More object tracks can be added depending on audio interface and/or computer resources</strong></p>
 </div>
 </div>
-<p>For troubleshooting, please review the <strong><a href="Appendix_B.md">Appendix B - Troubleshooting</a></strong></p>
+<p>For troubleshooting, please review the <strong><a href="Appendix_B.html">Appendix B - Troubleshooting&nbsp;<span>B</span></a></strong></p>
 </section>
 <section id="setting-up-sync-when-using-local-audio-path-lap" class="level2" data-number="50.4">
 <h2 data-number="50.4" class="anchored" data-anchor-id="setting-up-sync-when-using-local-audio-path-lap"><span class="header-section-number">50.4</span> Setting Up Sync when using Local Audio Path (LAP)</h2>
