--- a/studio-session-analyser/index.html
+++ b/studio-session-analyser/index.html
@@ -177,7 +177,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="welcome" class="level2" data-number="1.1">
 <h2 data-number="1.1" class="anchored" data-anchor-id="welcome"><span class="header-section-number">1.1</span> Welcome</h2>
 <p>Thank you for purchasing the Studio Session Plugins (bundle) which includes the <strong>Studio Session Analyser</strong></p>
-<p>The Studio Session Analyser is a light version of our renowned <a href="../analyser_doc/00_Pure_Analyzer_00_Pure_Analyzer.md">FLUX:: Real Time Analyzer System</a></p>
+<p>The Studio Session Analyser is a light version of our renowned <a href="../analyser/index.html">FLUX:: Real Time Analyzer System</a></p>
 <p>The Session Analyser is installed as a single application. It has the same basic functioning as with the standard FLUX:: Analyser with the following limitations;</p>
 <ul>
 <li>Inputs &amp; Outputs : Mono / Stereo</li>
@@ -201,7 +201,7 @@ Note
 </section>
 <section id="user-documentation" class="level2" data-number="1.2">
 <h2 data-number="1.2" class="anchored" data-anchor-id="user-documentation"><span class="header-section-number">1.2</span> User documentation</h2>
-<p>Please refer to the <strong><a href="../analyser_doc/00_Pure_Analyzer_00_Pure_Analyzer.md">FLUX:: Real Time Analyzer System</a></strong> user documentation.</p>
+<p>Please refer to the <strong><a href="../analyser/index.html">FLUX:: Real Time Analyzer System</a></strong> user documentation.</p>
 <p>…</p>
 
 
