--- a/spat-revolution/Appendix_B.html
+++ b/spat-revolution/Appendix_B.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -506,7 +506,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Appendix B — Troubleshooting</h1>
+<h1 class="title"><span id="sec-trouble-shooting" class="quarto-section-identifier">Appendix B — Troubleshooting</span></h1>
 </div>
 
 
@@ -575,7 +575,7 @@ Note
 <li>Change the block size in your host DAW to match the new setting.</li>
 <li>Reopen <em>SPAT Revolution</em>.</li>
 </ul>
-<p>Also, please be sure to carefully read the detailed advice of the various DAW in the <strong><a href="Third_Party_Integration.md">Third party integration</a></strong> section of this guide and refer to the various provided templates.</p>
+<p>Also, please be sure to carefully read the detailed advice of the various DAW in the <strong><span class="quarto-unresolved-ref">?sec-third-party</span></strong> section of this guide and refer to the various provided templates.</p>
 </section>
 <section id="spat-send-and-return-daw" class="level2" data-number="B.2">
 <h2 data-number="B.2" class="anchored" data-anchor-id="spat-send-and-return-daw"><span class="header-section-number">B.2</span> SPAT Send and Return DAW</h2>
@@ -645,7 +645,7 @@ Note
 </ul>
 <p>To lower UI graphic frame rates, go to the SPAT preferences. Changing the Edit Frame Rate will reduce pressure on the graphics updates and important when a host machine does not have dedicated GPU and CPU resources.</p>
 <p>The latest release of <em>SPAT Revolution</em> includes a new Multi-Core Parallel Computation Algorithm. In the preference of <em>SPAT Revolution</em>, in the Engine section at the bottom, you can choose various computer hardware presets that match your setup. This is a simple step to tuning the computation algorithm.</p>
-<p>If you are still experiencing performance and sync issues, you may want to ensure that your hardware configuration meets the <strong><a href="Appendix_A.md"><em>SPAT Revolution</em> requirements and recommendations</a></strong></p>
+<p>If you are still experiencing performance and sync issues, you may want to ensure that your hardware configuration meets the <strong><a href="Appendix_A.html"><em>SPAT Revolution</em> requirements and recommendations&nbsp;<span>A</span></a></strong></p>
 <p>Consider as well to kill as many processes not required as possible (Wi-Fi/internet, background services and activity).</p>
 </section>
 <section id="display-performance-cpu-measurements" class="level2" data-number="B.5">
