--- a/spat-revolution/Spat_Environment_Artificial_Reverberation.html
+++ b/spat-revolution/Spat_Environment_Artificial_Reverberation.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -540,7 +540,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">30</span>&nbsp; <span class="chapter-title">Artificial Reverberation</span></h1>
+<h1 class="title"><span id="artificial-reverb" class="quarto-section-identifier"><span class="chapter-number">30</span>&nbsp; <span class="chapter-title">Artificial Reverberation</span></span></h1>
 </div>
 
 
