--- a/spat-revolution/Spat_Environment_Input_Modules.html
+++ b/spat-revolution/Spat_Environment_Input_Modules.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -532,7 +532,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="inputs-configuration" class="level2" data-number="18.2">
 <h2 data-number="18.2" class="anchored" data-anchor-id="inputs-configuration"><span class="header-section-number">18.2</span> Inputs configuration</h2>
 <ul>
-<li>Input type : allow to select if the source of the signal is coming from the selected input or from the signal generator included in <em>SPAT Revolution</em>. The nature of the generated signal can be changed in the <a href="Application_Preferences.md">Preference page</a>.</li>
+<li>Input type : allow to select if the source of the signal is coming from the selected input or from the signal generator included in <em>SPAT Revolution</em>. The nature of the generated signal can be changed in the <a href="Application_Preferences.html">Preference page&nbsp;<span>41</span></a>.</li>
 <li>Input stream : allow to select the stream type of the bloc.</li>
 </ul>
 <div class="callout callout-style-default callout-note callout-titled">
@@ -548,7 +548,7 @@ Note
 <p>Input stream types are : channel-based, HOA, A-Format, B-Format, UHJ, MS, Binaural and Transaural.</p>
 </div>
 </div>
-<p>For more options related to stream type, check the <a href="Spat_Environment_Setup_Page.md">Setup Page</a> section.</p>
+<p>For more options related to stream type, check the <a href="Spat_Environment_Setup_Page.html">Setup Page&nbsp;<span>17</span></a> section.</p>
 </section>
 <section id="routing" class="level2" data-number="18.3">
 <h2 data-number="18.3" class="anchored" data-anchor-id="routing"><span class="header-section-number">18.3</span> Routing</h2>
