--- a/spat-revolution/Spat_Environment_Output_Modules.html
+++ b/spat-revolution/Spat_Environment_Output_Modules.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -495,7 +495,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">22</span>&nbsp; <span class="chapter-title">Output</span></h1>
+<h1 class="title"><span id="source-room-modules-output-section" class="quarto-section-identifier"><span class="chapter-number">22</span>&nbsp; <span class="chapter-title">Output</span></span></h1>
 </div>
 
 
@@ -510,7 +510,7 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>The main thing to note at the output stage is that you can have any number of output routes. Like the <a href="6_Spat_Environment_6_4_Inputs_6_4_Inputs.md">Inputs</a>, they may be either direct hardware routes, which returns audio streams (via matrix routing) to the physical outputs of an audio interface connected to your <em>SPAT Revolution</em> workstation. The Hardware Output workflow is the most direct way to render in realtime to an actual loudspeaker system (or headphones).</p>
+<p>The main thing to note at the output stage is that you can have any number of output routes. Like the [Inputs -sec-input-modules], they may be either direct hardware routes, which returns audio streams (via matrix routing) to the physical outputs of an audio interface connected to your <em>SPAT Revolution</em> workstation. The Hardware Output workflow is the most direct way to render in realtime to an actual loudspeaker system (or headphones).</p>
 <div class="callout callout-style-default callout-warning callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
