--- a/spat-revolution/Spat_Environment_Setup_Page.html
+++ b/spat-revolution/Spat_Environment_Setup_Page.html
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -518,7 +518,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">17</span>&nbsp; <span class="chapter-title">Setup Page</span></h1>
+<h1 class="title"><span id="sec-setup-page" class="quarto-section-identifier"><span class="chapter-number">17</span>&nbsp; <span class="chapter-title">Setup Page</span></span></h1>
 </div>
 
 
@@ -540,18 +540,18 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li><a href="Spat_Environment_Input_Modules.html">Inputs&nbsp;<span>18</span></a></li>
 <li><a href="Spat_Environment_Input_Transcoder_Modules.html">Input Transcoders&nbsp;<span>19</span></a></li>
-<li><a href="Spat_Environment_Source_Room_Modules.md">Sources</a></li>
-<li><a href="Spat_Environment_Source_Room_Modules.md">Rooms</a></li>
-<li><a href="Spat_Environment_Master_Section_Modules.md">Sums</a></li>
-<li><a href="Spat_Environment_Master_Section_Modules.md">Master Transcoders</a></li>
-<li><a href="Spat_Environment_Master_Section_Modules.md">Masters</a></li>
-<li><a href="Spat_Environment_Master_Section_Modules.md">Binaural Monitors</a></li>
-<li><a href="Spat_Environment_Output_Modules.md">Outputs</a></li>
+<li><a href="Spat_Environment_Source_Room_Modules.html">Sources&nbsp;<span>20</span></a></li>
+<li><a href="Spat_Environment_Source_Room_Modules.html">Rooms&nbsp;<span>20</span></a></li>
+<li><span class="citation" data-cites="source-room-modules-master-section">[Sums -@source-room-modules-master-section]</span></li>
+<li><span class="citation" data-cites="source-room-modules-master-section">[Master Transcoders -@source-room-modules-master-section]</span></li>
+<li><span class="citation" data-cites="source-room-modules-master-section">[Masters -@source-room-modules-master-section]</span></li>
+<li><span class="citation" data-cites="source-room-modules-master-section">[Binaural Monitors -@source-room-modules-master-section]</span></li>
+<li><span class="citation" data-cites="source-room-modules-output-section">[Outputs -@source-room-modules-output-section]</span></li>
 </ul>
 </section>
 <section id="stream-types-and-associated-options" class="level2" data-number="17.2">
 <h2 data-number="17.2" class="anchored" data-anchor-id="stream-types-and-associated-options"><span class="header-section-number">17.2</span> Stream types and associated options</h2>
-<p>Modules blocs are characterized by their stream type. In spatial audio, audio streams can be of different natures, as seen in the <a href="">Spatialisation Technology</a> section.</p>
+<p>Modules blocs are characterized by their stream type. In spatial audio, audio streams can be of different natures, as seen in the <span class="citation" data-cites="spat-technology">[Spatialisation Technology -@spat-technology]</span> section.</p>
 <p>Stream types and their options are :</p>
 <ul>
 <li><strong>Channel-based</strong> : most common used bloc where one channel correspond to one speaker or one microphone.
