--- a/spat-revolution/Third_Party_Bitwig_Studio.html
+++ b/spat-revolution/Third_Party_Bitwig_Studio.html
@@ -74,7 +74,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">12. Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_Bitwig_Studio.html"><span class="chapter-number">54</span>&nbsp; <span class="chapter-title">Bitwig Studio</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_Bitwig_Studio.html"><span class="chapter-number">54</span>&nbsp; <span class="chapter-title">Bitwig Studio</span></a></li></ol></nav>
       <a class="flex-grow-1" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -495,7 +495,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">54</span>&nbsp; <span class="chapter-title">Bitwig Studio</span></h1>
+<h1 class="title"><span id="sec-bitwig" class="quarto-section-identifier"><span class="chapter-number">54</span>&nbsp; <span class="chapter-title">Bitwig Studio</span></span></h1>
 </div>
 
 
@@ -530,7 +530,7 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Setting Up Controllers in BitWig</strong></p>
 <p>BitWig has comprehensive support for many popular MIDI controller surfaces. These can be very easily mapped to SPAT SEND parameters for hands on control of virtual objects and rooms.</p>
 <p><strong>Troubleshooting</strong></p>
-<p>For troubleshooting, please review the <strong><a href="Appendix_B.md">Appendix B - Troubleshooting</a></strong></p>
+<p>For troubleshooting, please review the <strong><a href="Appendix_B.html">Appendix B - Troubleshooting&nbsp;<span>B</span></a></strong></p>
 
 
 
