--- a/spat-revolution/Third_Party_Figure53_QLab.html
+++ b/spat-revolution/Third_Party_Figure53_QLab.html
@@ -74,7 +74,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">12. Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_Figure53_QLab.html"><span class="chapter-number">55</span>&nbsp; <span class="chapter-title">Figure53 QLab</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Third_Party_Integration.html">Third Party Integration</a></li><li class="breadcrumb-item"><a href="./Third_Party_Figure53_QLab.html"><span class="chapter-number">55</span>&nbsp; <span class="chapter-title">Figure53 QLab</span></a></li></ol></nav>
       <a class="flex-grow-1" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -379,7 +379,7 @@ ul.task-list li input[type="checkbox"] {
   </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">12. Third Party Integration</a>
+            <a href="./Third_Party_Integration.html" class="sidebar-item-text sidebar-link">Third Party Integration</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
@@ -505,7 +505,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">55</span>&nbsp; <span class="chapter-title">Figure53 QLab</span></h1>
+<h1 class="title"><span id="sec-qlab" class="quarto-section-identifier"><span class="chapter-number">55</span>&nbsp; <span class="chapter-title">Figure53 QLab</span></span></h1>
 </div>
 
 
@@ -603,7 +603,7 @@ Note
 <p><strong>QLab Workspace Settings / Network</strong></p>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/QLabNetworkSettings.png" class="img-fluid"></p>
 <p>On the QLab side, use the Network Patch settings to configure OSC destinations. One of them can be SPAT.</p>
-<p>You can now send OSC network cues from QLab to SPAT, and control <strong>most if not all parameters</strong> of this virtual environment using <a href="Appendix_C_OSC_Table.md">Appendix C - OSC and ADM-OSC Table</a>. Once you get the hang of it, this is really very straightforward.</p>
+<p>You can now send OSC network cues from QLab to SPAT, and control <strong>most if not all parameters</strong> of this virtual environment using <a href="Appendix_C_OSC_Table.html">Appendix C - OSC and ADM-OSC Table&nbsp;<span>C</span></a>. Once you get the hang of it, this is really very straightforward.</p>
 <p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/QLabTemplate.png" class="img-fluid"></p>
 <p>…</p>
 
